...
                                    <constraint firstAttribute="width" constant="60" id="i9Q-I2-IoL"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTs-43-fU4">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="nN2-XJ-2T5"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <outlet property="cellImage" destination="uqV-m4-7Fq" id="3YK-Jo-bQ9"/>
                                            <outlet property="dateLabel" destination="Rd9-bh-DEb" id="hdL-7d-b6j"/>
                                            <outlet property="likeButton" destination="sBi-4N-tHO" id="W11-By-ugR"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="aNd-fl-Xp9"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cbg-DB-h6K"/>
...
