...
    
    weak var delegate: WebViewViewControllerDelegate?
    
    //MARK: - ViewDidLoad
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        progressObservationKVO()
    }
    
    //MARK: - Methods
...
