...
    //MARK: - Life cycle
    override func viewDidLoad() {
        super.viewDidLoad()
        self.scrollView.minimumZoomScale = 0.1
        self.scrollView.maximumZoomScale = 2.5
        setImage()
        navigationItem.backBarButtonItem?.accessibilityIdentifier = "backButton"
    }
    

    //MARK: - Methods
    @IBAction private func didTapBackButton() {
        dismiss(animated: true)
...
